correct the size of the suggestion search results on mobile

--- a/public/css/Components/dashboard_v2.css
+++ b/public/css/Components/dashboard_v2.css
@@ -123,6 +123,9 @@
   width: 100%;
   padding: 1rem 0.5rem;
   border-top: 1px solid rgba(var(--mainColor), 0.2);
+  z-index: 3;
+  box-shadow: rgb(0 0 0 / 25%) 0px 10px 15px -3px,
+    rgb(0 0 0 / 7%) 0px 40px 15px -2px;
 }
 .autocomplete-items div {
   padding-bottom: 0.5rem;
@@ -562,5 +565,8 @@
 
   .eachResult .lessonFooterRight small {
     margin-left: 0.5rem;
+  }
+  .autocomplete-items div {
+    font-size: 0.75rem;
   }
 }
